java 11 compatible functions